<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f5f5dc">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yrsa_light"
        android:text="HEllO!"
        android:textStyle="bold"
        android:layout_marginTop="160dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:hint="First value"
        android:padding="12dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:hint="Second value"
        android:padding="12sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_1" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit"
        android:text="+"
        android:textSize="24dp"
        android:backgroundTint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_2" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit"
        android:text="÷"
        android:textSize="36dp"
        android:backgroundTint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />


</androidx.constraintlayout.widget.ConstraintLayout>